welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
	if (isAsleep==true) {return false}
	else {if ( isMorning==true && isMom==true) {return true}
	if (isMorning== true && isMom==false) {return false}
	if ( isMorning== false && isMom== true) {return true}
	if ( isMorning== false && isMom== false) {return true} }
}
